# FYP

python/: README  anchorCov.py  calJuncCoverage.py  cat.py  changeSimulatedHeaderForTrans.py  cig2bed.py  classify.py  clean.py  divideMisa.py  drawLengthValidate.py  exJun.py  extractSplitReads.py  findGeneBoundaries.py  findMisaSupport.py  findNovelJunctions.py  findNovelJunctions1.py  getExons.py  getIntronStats.py  getReadStats.py  getSplicingSignal.py  output.bed  readBed.py  readFlat.py  recover-after-tophat.txt  recover.txt  recoverJuncs.py  removeHeaderSpace.py  rmpolyA.py  run  run.bat  run.py  runCalJuncCovOut-after-tophat.txt  runCalJuncCovOut.txt  runCalJuncCoverage.py  runExtract.py  runFoundvsSupposed.py  runJunctionsSupposedToFind.py  runRawbin.py  runResidueVSDis.py  runSimulationValidation.py  (+9 more)
rawbin/: extend.cpp
rnaseq-1.03_mmx/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in
rnaseq-1.03_mmx/autom4te.cache/: output.0  traces.0  traces.1
rnaseq-1.03_mmx/scripts/: Makefile  Makefile.am  Makefile.in  build_index  build_revcmp
rnaseq-1.03_mmx/src/: .common.h.swp  .extend.cpp.swp  .rnaseq.cpp.swp  .rqindex.h.swp  Cmdline.cpp  Cmdline.h  Hash.cpp  Hash.h  Indexes.cpp  Indexes.h  Makefile  Makefile.am  Makefile.in  MiscUtilities.h  QSufSort.c  batlib.cpp  batlib.h  bwtformatdb.c  common.h  const.h  extend.cpp  extend.h  file.cpp  file.h  index  index.cpp  reverse  rnaseq  rnaseq.cpp  rqindex.cpp  rqindex.h  tags
rnaseq-1.03_mmx/src/.deps/: BWT.Po  BWTConstruct.Po  Cmdline.Po  DNACount.Po  HSP.Po  HSPstatistic.Po  Hash.Po  Indexes.Po  MemManager.Po  MiscUtilities.Po  QSufSort.Po  Socket.Po  TextConverter.Po  Timing.Po  batlib.Po  bfix.Po  bwtformatdb.Po  crc32.Po  deflate.Po  dictionary.Po  extend.Po  file.Po  gzio.Po  index.Po  infback.Po  inffast.Po  inflate.Po  inftrees.Po  iniparser.Po  inistrlib.Po  karlin.Po  r250.Po  reverse.Po  rnaseq.Po  rqindex.Po  trees.Po  zutil.Po
tex/: ReadJunc.tex  findjunc5.aux  findjunc5.tex
